--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 
     <script>
     $(function () {
-    $('#[insert ID your tooltip here]').tooltip();
+    $('#[item1]').tooltip();
     });
     </script>
 
