tooltip lins to railsgirls

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 
           <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
             <div class="panel-body">
-              I started my passion for coding with the <a href="#" title="More information" id="item1">RailsGirlsBerlin</a> , so I feel very comfortable working mostly with Ruby and Rails Apps. But I discovered of course that it makes sense to have a good knowledge of Javascript functions as well, since most of the APIs contain Javascript functions and these often must be adjusted to the Rails Application. I am very open to learn new things and enjoying both frontend and backend coding. But mostly I want to specialise in backend problems, because they really trigger my curiousity.
+              I started my passion for coding with the <a href="http://railsgirlsberlin.de/" title="More information" id="item1">RailsGirlsBerlin</a> , so I feel very comfortable working mostly with Ruby and Rails Apps. But I discovered of course that it makes sense to have a good knowledge of Javascript functions as well, since most of the APIs contain Javascript functions and these often must be adjusted to the Rails Application. I am very open to learn new things and enjoying both frontend and backend coding. But mostly I want to specialise in backend problems, because they really trigger my curiousity.
             </div>
           </div>
         </div>
