more tooltip buttons

--- a/index.html
+++ b/index.html
@@ -161,17 +161,20 @@
         <div class="col-md-4 col-xs-6">
           <h2>Coding Goals</h2>
           <p>Every Project I work on, is a wisely chosen content. I make sure to code for sustainable and green projects, to work with social companies and NGOs in order to contribute to a healthier economy. We all have the choice. It empowers us to make it. </p>
-          <p><a class="btn btn-default" href="https://drahthaus.at/" role="button">Surprise &raquo;</a></p>
+          <p><a class="btn btn-default" href="https://drahthaus.at/" role="button">old button &raquo;</a>
+            <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Tooltip on top">Surprise &raquo;</button></p>
         </div><!-- /col -->
         <div class="col-md-4 col-xs-6">
           <h2>ediblehood</h2>
           <p>This is a website I started creating to visualize all the spaces with urban gardening on an interactive map. Our dream is to connect all people in their areas who want to grow their own food and do urban gardening together with their neighbors. The map should not only show spaces that are already used as gardens, but also show potential areas and informations about them. We want to connect with the government as well in order to create legal gardening spaces.</p>
-          <p><a class="btn btn-default" href="#" role="button">go to the website &raquo;</a></p>
+          <p><a class="btn btn-default" href="https://ediblehood-062016.herokuapp.com/" role="button">go to the website &raquo;</a>
+            <button type="button" class="btn btn-default" href="https://ediblehood-062016.herokuapp.com/" data-toggle="tooltip" data-placement="top" title="Tooltip on top">Surprise &raquo;</button></p>
        </div><!-- /col -->
         <div class="col-md-4 col-xs-6">
           <h2>Portfolio Concept</h2>
           <p>I want to create a nice overview that will be visible online for everyone and that shows all my developer skills. It should be very simple to understand and nice to look at. It should also be fun to use.</p>
-          <p><a class="btn btn-default" href="#" role="button">See more &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button">See more &raquo;</a>
+            <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Tooltip on top">Surprise &raquo;</button></p>
         </div><!-- /col -->
       </div><!-- /row -->
 
@@ -466,6 +469,13 @@
     $('#[item1]').tooltip();
     });
     </script>
+
+    <script>
+    $(function () {
+    $('[data-toggle="tooltip"]').tooltip();
+    });
+    </script>
+
 
 
 <footer>
