--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <!-- Custom styles for this template go here -->
-    <link rel="stylesheet" href="css/style_about.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 
