adding work pictures to my new js array
iterating through every element of the work array to append any new
image in the same way to the new jQuery function for a shorter and
cleaner code

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <div class="container" id="work">
       <h2>My Work</h2>
       <div class="row" id="work">
-        <div class="col-xs-6 col-md-3">
+        <!-- <div class="col-xs-6 col-md-3">
           <img src="img/ediblehoodhome.jpg" class="img-responsive" alt="ediblehood app homepage">
         </div>
 
@@ -217,7 +217,7 @@
         <div class="col-xs-6 col-md-3">
           <img src="img/sunny.jpg" class="img-responsive" id="main">
         </div>
-
+ -->
       </div> <!-- work row end -->
     </div> <!-- container work end -->
 
@@ -460,6 +460,7 @@
     </script>
 
     <script src="js/jquery.stellar.min.js"></script>
+    <script src="js/work.js"></script>
     <script src="js/scripts.js"></script>
 
 
