update about section with links

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   <li><a href="http://lifeofkaja.blogspot.de/">Blog</a></li>
                   <li><a href="https://www.instagram.com/kaja_tiger/">Instagram</a></li>
                   <li><a href="https://github.com/kajatiger">Github</a></li>
-                  <li role="separator" class="divider"></li>      
+                  <li role="separator" class="divider"></li>
                   <li><a href="#video">Video</a></li>
                 </ul>
             </li>
@@ -69,7 +69,7 @@
             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
           </ol>
           <!-- Wrapper for slides -->
-          <div class="carousel-inner" role="listbox">     
+          <div class="carousel-inner" role="listbox">
             <div class="item active">
               <img src="img/desk.jpg" alt="workplace">
               <div class="carousel-caption" id="tree">
@@ -80,15 +80,15 @@
             <div class="item">
               <img src="img/methodkit.jpg" alt="methodkit showing the project management cards">
               <div class="carousel-caption">
-                <h2>It all begins with your Story</h2>  
-                <p>What is it, that you want to create? Let's take the next steps together to make things real.</p>    
+                <h2>It all begins with your Story</h2>
+                <p>What is it, that you want to create? Let's take the next steps together to make things real.</p>
               </div> <!-- carousel caption end -->
             </div> <!-- item end -->
             <div class="item">
               <img src="img/code.jpg" alt="desk with mac showing code">
               <div class="carousel-caption">
-                <h2>The Magic of good Coding</h2>  
-                <p>Don't hesitate to think big. Everything is possible!</p> 
+                <h2>The Magic of good Coding</h2>
+                <p>Don't hesitate to think big. Everything is possible!</p>
               </div> <!-- carousel caption end -->
             </div> <!-- item end -->
             ...
@@ -106,7 +106,7 @@
       </div> <!-- container fluid end -->
     </div> <!-- hidden xs end -->
 
-    <!--     BOOTSTRAP COLUMNS GOALS, PROJECT ETC-->    
+    <!--     BOOTSTRAP COLUMNS GOALS, PROJECT ETC-->
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
@@ -135,8 +135,8 @@
     <div class="container" id="work">
       <h2>My Work</h2>
       <div class="row" id="work">
-      </div> 
-    </div> 
+      </div>
+    </div>
 
     <!-- ABOUT CONTAINER -->
     <div class="container" id="about">
@@ -150,7 +150,7 @@
         <div class="col-xs-6 col-md-4">
           <h2>Introducing myself</h2>
           <p>Hello! I am Kaja from Berlin and I am a Web Developer and a Philosopher. I like coding, but it is not the only thing I like to do. Sometimes I go surfing in Morocco or snowboarding in France. And I am a total foody. Doesn't everyone love good food?</p>
-          <p>If you need an awesome Website just get in touch with me and we can talk about the your Concepts and Visions. I am full of Motivation and new Ideas.</p>
+          <p>I love to code with Ruby, but also am into Elixir and other languages. Anything that will effectively solve the problem and is beautiful to read and write.</p>
         </div>
         <div class="col-xs-6 col-md-4">
           <img src="img/working.jpg" alt="working" class="pic">
@@ -169,12 +169,15 @@
             <li>many more...</li>
           </ul>
         </div>
-        <div class="col-xs-6 col-md-4">       
+        <div class="col-xs-6 col-md-4">
           <img src="img/kajapalette.jpg" alt="die ganze palette" class="pic">
         </div>
         <div class="col-xs-6 col-md-4">
           <h2>What I've done so far</h2>
-          <p>My first Application is ediblehood (check out above). I've taken part in many Events of the RailsGirlsBerlin and the OpenTechSchool in Berlin. If you want to see the code that I have produced so far, make sure to check out my GitHub account.</p>
+          <p>My first pet project in 2016 was <a href="https://ediblehood-062016.herokuapp.com/" target="_blank">ediblehood</a>. I've taken part in many events of the <a href="http://railsgirlsberlin.de/" target="_blank">RailsGirlsBerlin</a> and the <a href="https://www.opentechschool.org/" target="_blank">OpenTechSchool</a> in Berlin. In the end of 2016 I took a 3-months long bootcamp course in web development. In the same time I was part of the Ruby studygroup <a href="https://rorganize.it/groups/contentful-to-be-named" target="_blank">Rubystars</a>.</p>
+          <p>In 2017 I got into the <a href="https://railsgirlssummerofcode.org/blog/2017-07-25-team-berlindiamonds" target="_blank">RailsGirls Summer of Code</a>RailsGirls Summer of Code scholarship and was building <a href="https://github.com/berlindiamonds" target="_blank">open source plugins</a> for <a href="https://github.com/discourse/discourse" target="_blank">Discourse</a> that made a backup to several cloud providers possible. My coaching company <a href="https://www.absolventa.de/" target="_blank">Absolventa</a> employed me right after that and I worked for them as a backend developer for the next two and a half years.</p>
+          <p>In 2020 I joined <a href="https://www.liefery.com/" target="_blank">Liefery</a> at a backend developer and am currently happily employed there.
+          If you want to see the code that I have produced so far, make sure to check out my <a href="https://github.com/kajatiger" target="_blank">GitHub account</a>.</p>
         </div>
       </div> <!-- about me row end -->
       <div class="main-text">
@@ -194,7 +197,7 @@
         <div class="col-xs-6 col-md-4">
           <div class="contact-poster">
             <div class="email">
-              <p><span class="glyphicon glyphicon-envelope"></span>  Email me to:</p> 
+              <p><span class="glyphicon glyphicon-envelope"></span>  Email me to:</p>
               <a href="k.santro@posteo.de" id="link">k.santro@posteo.de</a>
               <p><span class="glyphicon glyphicon-comment"></span>  If you want to contact me via Facebook, just add me as a friend</p>
               <a href="https://www.facebook.com/kaja.noe" id="link">My Facebook Profile</a>
@@ -258,13 +261,13 @@
           <div class="panel-heading" role="tab" id="headingThree">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Who did you already work for?        
+              Who did you already work for?
               </a>
             </h4>
           </div>
           <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
             <div class="panel-body">
-              I built my own App (ediblehood) and helped out at betterplace.org. They are an online App for charity fundraising and are built with Ruby on Rails. The developer team at betterplace is really friendly and fun and they were happy to teach me some of their magic. 
+              I built my own App (ediblehood) and helped out at betterplace.org. They are an online App for charity fundraising and are built with Ruby on Rails. The developer team at betterplace is really friendly and fun and they were happy to teach me some of their magic.
             </div> <!-- panel body end -->
           </div> <!-- collapseThree end -->
         </div>
@@ -274,7 +277,7 @@
     <!-- LEARN MORE CV MODAL -->
     <div class="row">
       <h2 class="learn-more">Learn more...</h2>
-      <div class="modal-button">        
+      <div class="modal-button">
         <button class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">View CV</button>
         <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" data-backdrop="static"  data-keyboard="false">
           <div class="modal-dialog modal-lg" role="document">
@@ -285,7 +288,7 @@
               </div> <!-- header end -->
               <div class="modal-body">
                 <embed id="CV" src="cvKajaSantroEngl.pdf">
-              </div> 
+              </div>
             </div> <!-- modal content end -->
           </div> <!-- modal dialog end -->
         </div> <!-- modal fade end -->
@@ -301,7 +304,7 @@
       </div>
     </div>
 
-    
+
     <!-- JavaScript -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Bootstrap core JS -->
@@ -332,7 +335,7 @@
         </a>
       </div> <!-- follow twitter end -->
       <div class="fb-like" data-href="http://kaja.bitballoon.com/" data-width="40px" data-layout="button" data-action="like" data-show-faces="true" data-share="false">
-      </div>  
+      </div>
       <div class="copyright">
         <p>&copy; 2016 Kaja Santro. All rights reserved.</p>
       </div> <!-- copyright end -->
