update content in the bootstrap columns and fix the links in the buttons

--- a/index.html
+++ b/index.html
@@ -111,22 +111,29 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4 col-xs-6">
-          <h2>Coding Goals</h2>
-          <p>Every Project I work on, is a wisely chosen content. I make sure to code for sustainable and green projects, to work with social companies and NGOs in order to contribute to a healthier economy. We all have the choice. It empowers us to make it. </p>
-          <p><a class="btn btn-default" href="https://drahthaus.at/" role="button">old button &raquo;</a>
-            <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Tooltip on top" href="https://ediblehood-062016.herokuapp.com/">Surprise &raquo;</button></p>
+          <h2>Career Goals</h2>
+          <p>While mostly coding in Ruby I want to constantly learn new languages and things. During my time as a web developer, I realized that beside the technical part, I am also learning a lot of character shaping and interpersonal skills. They come in especially handy when working in bigger teams, which is my preferred working environment. My career goal is to constantly keep learning and stay open to critically think about my current knowledge.</p>
+          <p>Since I as a woman was given the opportunities to take this career path by a lot of people who helped and coached me on the way and who showed me that there is a lot more to learn, I want to give back the same to other women. I love to mentor and empower women who just discovered the tech world and show them that anything is possible. This is why I am an organizer at <a href="https://www.codecurious.org/" target="_blank">code curious</a>.</p>
+          <p>
+            <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="my hackerinnen profile" onclick="window.location.href='https://hackerinnen.space/spaces/berlin/kaja-santro/'">hackerinnen &raquo;</button>
+            <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="contribute to code curious" onclick="window.location.href='https://github.com/codecurious-bln/CC-website'">contribute &raquo;</button>
+          </p>
         </div><!-- /col -->
         <div class="col-md-4 col-xs-6">
           <h2>ediblehood</h2>
-          <p>This is a website I started creating to visualize all the spaces with urban gardening on an interactive map. Our dream is to connect all people in their areas who want to grow their own food and do urban gardening together with their neighbors. The map should not only show spaces that are already used as gardens, but also show potential areas and informations about them. We want to connect with the government as well in order to create legal gardening spaces.</p>
-          <p><a class="btn btn-default" href="https://ediblehood-062016.herokuapp.com/" role="button">old button &raquo;</a>
-            <button type="button" class="btn btn-default" href="https://ediblehood-062016.herokuapp.com/" data-toggle="tooltip" data-placement="top" title="Tooltip on top">Surprise &raquo;</button></p>
+          <p>This is an app Linda Bergen and I started creating in 2016 to visualize all the spaces with urban gardening on an interactive map. Our dream is to connect all people in their areas who want to grow their own food and do urban gardening together with their neighbors. The map should not only show spaces that are already used as gardens, but also show potential areas and informations about them. We want to connect with the government as well in order to create legal gardening spaces.</p>
+          <p>
+            <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="check out the ediblehood" onclick="window.location.href='https://ediblehood-062016.herokuapp.com/'">ediblehood &raquo;</button>
+            <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="contribute to ediblehood" onclick="window.location.href='https://github.com/kajatiger/ediblehood'">contribute &raquo;</button>
+          </p>
         </div><!-- /col -->
         <div class="col-md-4 col-xs-6">
-          <h2>Portfolio Concept</h2>
-          <p>I want to create a nice overview that will be visible online for everyone and that shows all my developer skills. It should be very simple to understand and nice to look at. It should also be fun to use.</p>
-          <p><a class="btn btn-default" href="#" role="button">old button &raquo;</a>
-            <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Tooltip on top">Surprise &raquo;</button></p>
+          <h2>Rails Girls Summer of Code</h2>
+          <p>In 2017 I got into the scholarship program and built open source plugins for <a href="https://github.com/discourse/discourse" target="_blank">Discourse</a> that allow you to backup the app to several cloud providers. The <a href="https://railsgirlssummerofcode.org/" target="_blank">#RGSoC</a> was organized by the Travis Foundation that were gathering the funding for the scholarships. Unfortunately in 2020 they stopped the project, although it had been shown to be very successfull to get women into open source programming and also helped them to kick off their engineering careers.</p>
+          <p>
+            <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="blog post about our scholarship" onclick="window.location.href='https://railsgirlssummerofcode.org/blog/2017-09-15-d-for-diamonds'">RGSoC &raquo;</button>
+            <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="check out our discourse plugins" onclick="window.location.href='https://github.com/berlindiamonds'">plugins &raquo;</button>
+          </p>
         </div><!-- /col -->
       </div><!-- /row -->
     </div> <!-- /container -->
@@ -182,9 +189,9 @@
       </div> <!-- about me row end -->
       <div class="main-text">
         <h3>My Story</h3>
-        <p>I grew up in Berlin Kreuzberg with two languages: German and Croatian. When I was eleven years old, my family moved to San Francisco for a year, where I went to middle school and picked up English as my third language. Back in Berlin I also took Latin and French in highschool. While being very interested in languages I also took Arts and Mathematics as my other two graduation subjects. Back then I didn't know what coding was, otherwise I would have already took Informatics as my main subject, since it combines the fun things about languages and mathematics.</p>
-        <p>Still not knowing about Coding I studied Philosophy and Historical Linguistics and it satisfied some of my curiousity about Syntax and Logics. But soon after graduating from University I realized that I still wanted more, I wanted to learn something that I really could create cool things with, useful things. So I got interested in Coding</p>
-        <p>I heard about a huge community of girls who teach coding in Berlin: RailsGirlsBerlin. And when I went to their first Beginner's Workshop, I got totally hooked. I fell in love with Ruby on Rails and took a Web Developer Course at the CareerFoundry.</p>
+        <p>I grew up in Berlin Kreuzberg with two languages: German and Croatian. When I was eleven years old, my family moved to San Francisco for a year, where I went to middle school and picked up English as my third language. Back in Berlin I also took Latin and French in highschool. While being very interested in languages I also took arts and mathematics as my other two graduation subjects. Back then I didn't know what coding was, otherwise I would have already took informatics as my main subject, since it combines the fun things about languages and mathematics.</p>
+        <p>Still not knowing about coding I studied philosophy and historical linguistics and it satisfied some of my curiousity about syntax and logics. But soon after graduating from university I realized that I still wanted more, I wanted to learn something that I really could create cool things with, useful things. So I got interested in coding</p>
+        <p>I heard about a huge community of girls who teach coding in Berlin: <a href="http://railsgirlsberlin.de/" target="_blank">RailsGirlsBerlin</a>. And when I went to their first Beginner's Workshop, I got totally hooked. I fell in love with Ruby on Rails and took a Web Developer Course at the CareerFoundry.</p>
         <p>In the meantime I started my first Project: ediblehood. An Application that connects all urban gardening projects in the area to give the community a chance creating green cities with neighborhood gardens and local grown food.</p>
       </div> <!--   main text end -->
     </div> <!-- container about end -->
