add videos of my conf talks

--- a/index.html
+++ b/index.html
@@ -165,14 +165,19 @@
         <div class="col-xs-6 col-md-4">
           <h2>My skills</h2>
           <ul id="skills list">
-            <li>HTML</li>
-            <li>CSS</li>
             <li>Ruby</li>
             <li>Rails</li>
+            <li>Elixir</li>
+            <li>Heroku</li>
+            <li>Postgres</li>
+            <li>HTML</li>
+            <li>CSS</li>
             <li>Javascript</li>
             <li>scrum</li>
             <li>pivotle</li>
-            <li>an eye for aethetics</li>
+            <li>Jira</li>
+            <li>Trello</li>
+            <li>solving conflicts</li>
             <li>many more...</li>
           </ul>
         </div>
@@ -301,6 +306,24 @@
         </div> <!-- modal fade end -->
       </div> <!-- modal button end -->
     </div> <!-- row end -->
+
+    <!-- VIDEO -->
+    <div class="container" id="video">
+      <h2 class="video-header">My Talk at the EuRuKo 2019</h2>
+      <!-- 16:9 aspect ratio -->
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/B_EuPGO_O6o" allowfullscreen></iframe>
+      </div>
+    </div>
+
+    <!-- VIDEO -->
+    <div class="container" id="video">
+      <h2 class="video-header">My Talk at the Balkan Ruby 2019</h2>
+      <!-- 16:9 aspect ratio -->
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/iFbGkGq8wOQ" allowfullscreen></iframe>
+      </div>
+    </div>
 
     <!-- VIDEO -->
     <div class="container" id="video">
