update work section with new images and content

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
     <!-- WORK CONTAINER IN WORK.JS -->
     <div class="container" id="work">
-      <h2>My Work</h2>
+      <h2>Things I have worked on</h2>
       <div class="row" id="work">
       </div>
     </div>
